# Loja_De_Jogos_Projeto_PLP

./: .gitignore  README.md  dadosIniciais.sql
haskell/: CHANGELOG.md  LICENSE  jogos.sql  plp.cabal
haskell/app/: Main.hs
haskell/app/Controller/: Admin.hs  Cliente.hs  CompraController.hs  JogoController.hs  User.hs  UsuarioController.hs  Util.hs
haskell/app/Controllers/: CompraController.hs  JogoController.hs  UsuarioController.hs
haskell/app/LocalDB/: ConnectionDB.hs
haskell/app/Models/: Compra.hs  Denuncia.hs  Jogo.hs  Usuario.hs
haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell/dist-newstyle/tmp/src-4392/witherable-0.4.2/: witherable.cabal
haskell/dist-newstyle/tmp/src-4394/semigroupoids-6.0.0.1/: .gitignore  .vim.custom  CHANGELOG.markdown  README.markdown  semigroupoids.cabal
haskell/dist-newstyle/tmp/src-4394/semigroupoids-6.0.0.1/img/: classes.dot
haskell/dist-newstyle/tmp/src-4394/semigroupoids-6.0.0.1/src/Data/: Groupoid.hs  Isomorphism.hs  Semigroupoid.hs
haskell/dist-newstyle/tmp/src-4394/semigroupoids-6.0.0.1/src/Data/Bifunctor/: Apply.hs
haskell/dist-newstyle/tmp/src-4394/semigroupoids-6.0.0.1/src/Data/Functor/: Alt.hs  Apply.hs  Bind.hs  Extend.hs  Plus.hs
haskell/dist-newstyle/tmp/src-4394/semigroupoids-6.0.0.1/src/Data/Functor/Bind/: Class.hs  Trans.hs
haskell/dist-newstyle/tmp/src-4394/semigroupoids-6.0.0.1/src/Data/Functor/Contravariant/: Conclude.hs  Decide.hs  Divise.hs
haskell/dist-newstyle/tmp/src-4394/semigroupoids-6.0.0.1/src/Data/Semigroup/: Bifoldable.hs  Bitraversable.hs  Foldable.hs  Traversable.hs
haskell/dist-newstyle/tmp/src-4394/semigroupoids-6.0.0.1/src/Data/Semigroup/Foldable/: Class.hs
haskell/dist-newstyle/tmp/src-4394/semigroupoids-6.0.0.1/src/Data/Semigroup/Traversable/: Class.hs
haskell/dist-newstyle/tmp/src-4394/semigroupoids-6.0.0.1/src/Data/Semigroupoid/: Categorical.hs  Dual.hs  Ob.hs  Static.hs
haskell/dist-newstyle/tmp/src-4394/semigroupoids-6.0.0.1/src/Data/Traversable/: Instances.hs
haskell/dist-newstyle/tmp/src-4394/semigroupoids-6.0.0.1/src/Semigroupoids/: Do.hs  Internal.hs
prolog/: cliente.pl  limparTela.hs  main.pl  util.pl
prolog/Controller/: Admin.pl  Cliente.pl  Compra.pl  Jogo.pl  User.pl  (+1 more)
(+2 files in other folders)
