cabal-version:      3.0
name:               plp
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:            MIT

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Marcos

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         marcos.vinicius.fragoso.oliveira@ccc.ufcg.edu.br

-- A copyright notice.
-- copyright:
category:           System
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable plp
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:      Controller.User,
                        Controller.Admin,
                        Controller.Cliente,
                        Controller.Util,
                        Controller.CompraController,
                        Controller.UsuarioController,
                        Controller.JogoController,
                        LocalDB.ConnectionDB,
                        Models.Compra,
                        Models.Jogo,
                        Models.Usuario

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:      base ^>=4.17.0.0,
                        time >=1.12.2,
                        ansi-terminal >= 0.11,
                        postgresql-simple ^>=0.7.0.0,
                        process,
                        text

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010
